// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/time-picker/demo/12hours.md correctly 1`] = `
<div>
  <span
    class="wmstool-time-picker "
  >
    <input
      class="wmstool-time-picker-input"
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="wmstool-time-picker-icon"
    />
  </span>
  <span
    class="wmstool-time-picker "
  >
    <input
      class="wmstool-time-picker-input"
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="wmstool-time-picker-icon"
    />
  </span>
  <span
    class="wmstool-time-picker "
  >
    <input
      class="wmstool-time-picker-input"
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="wmstool-time-picker-icon"
    />
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/addon.md correctly 1`] = `
<span
  class="wmstool-time-picker "
>
  <input
    class="wmstool-time-picker-input"
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="wmstool-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/basic.md correctly 1`] = `
<span
  class="wmstool-time-picker "
>
  <input
    class="wmstool-time-picker-input"
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="wmstool-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/disabled.md correctly 1`] = `
<span
  class="wmstool-time-picker "
>
  <input
    class="wmstool-time-picker-input"
    disabled=""
    placeholder="Select time"
    type="text"
    value="12:08:23"
  />
  <span
    class="wmstool-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/hide-column.md correctly 1`] = `
<span
  class="wmstool-time-picker "
>
  <input
    class="wmstool-time-picker-input"
    placeholder="Select time"
    type="text"
    value="12:08"
  />
  <span
    class="wmstool-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/interval-options.md correctly 1`] = `
<span
  class="wmstool-time-picker "
>
  <input
    class="wmstool-time-picker-input"
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="wmstool-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/size.md correctly 1`] = `
<div>
  <span
    class="wmstool-time-picker wmstool-time-picker-large"
  >
    <input
      class="wmstool-time-picker-input"
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="wmstool-time-picker-icon"
    />
  </span>
  <span
    class="wmstool-time-picker "
  >
    <input
      class="wmstool-time-picker-input"
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="wmstool-time-picker-icon"
    />
  </span>
  <span
    class="wmstool-time-picker wmstool-time-picker-small"
  >
    <input
      class="wmstool-time-picker-input"
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="wmstool-time-picker-icon"
    />
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/value.md correctly 1`] = `
<span
  class="wmstool-time-picker "
>
  <input
    class="wmstool-time-picker-input"
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="wmstool-time-picker-icon"
  />
</span>
`;
